# alpacka

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  packages.json  packages2.json  result
.github/: README.md
.github/workflows/: build.yml  ci.yml  nix.yml
alpacka-cli/: Cargo.toml  README.md
alpacka-cli/src/: main.rs
alpacka-cli/src/cli/: install.rs  list_generations.rs  mod.rs
alpacka-lib/: Cargo.toml
alpacka-lua/: Cargo.toml
alpacka-nvim/: Cargo.toml
alpacka-nvim/src/: lib.rs
alpacka-nvim/src/functions/: hello.rs  install.rs  mod.rs
contrib/: packages.json
ref/: installer.rs  main.rs  main2.rs
src/: clap.rs  config.rs  git.rs  lib.rs  loader.rs  main.rs  main3.rs  main4.rs  manifest.rs  package.rs  packages.json  rkyv.rs  semver.rs
src/cli/: clap.rs  install.rs  list_generations.rs  mod.rs
src/smith/: enums.rs  git.rs  mod.rs
