[package]
name = "alpacka"
version = "0.1.0"
description = "The next-generation package manager for neovim."
repository = "https://github.com/nyoom-engineering/alpacka"
readme = ".github/README.md"
authors = ["Shaurya Singh <shaunsingh0207@gmail.com>", "Suyashtnt <suyashtnt@gmail.com>"]
license = "MIT"
keywords = ["vim", "neovim", "package", "plugin", "manager"]
categories = ["command-line-utilities", "text-editors"]
edition = "2021"

[dependencies]
bytecheck = "0.6.9"
dirs-sys = "0.3.7"
error-stack = { version = "0.3.0", features = ["spantrace"] }
git2 = "0.16.1"
ptr_meta = "0.1.4"
rayon = "1.6.1"
rkyv = { version = "0.7.41", features = ["validation", "strict"] }
rkyv_dyn = { version = "0.7.41", features = ["validation", "strict"] }
rkyv_typename = "0.7.41"
serde_json = "1.0.91"
tempfile = "3.3.0"
clap = { version = "4.1.4", features = ["derive"] }
tracing-error = "0.2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = false

[dependencies.tracing]
version = "0.1"
features = []
optional = false

[dependencies.tracing-subscriber]
version = "0.3"
optional = false
features = ["env-filter"]

[[bin]]
name = "alpacka"
path = "src/main.rs"

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
