[workspace]

members = [
    "alpacka-lib",
    "alpacka-cli"
]

[workspace.dependencies.tracing]
version = "0.1"
features = []
optional = false


[workspace.dependencies.error-stack]
version = "0.3.1"
features = ["spantrace"]

[workspace.dependencies.rkyv]
version = "0.7.41"
features = ["validation", "strict"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]
optional = false

[workspace.dependencies]
tracing-error = "0.2.0"
rayon = "1.6.1"
serde_json = "1.0.91"
ptr_meta = "0.1.4"
bytecheck = "0.6.11"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1