[workspace]
members = [
    "alpacka-cli",
    "alpacka-lua"
]

[workspace.dependencies.tracing]
version = "0.1"
features = []
optional = false


[workspace.dependencies.error-stack]
version = "0.3.1"
features = ["spantrace"]

[workspace.dependencies.rkyv]
version = "0.7.41"
features = ["validation", "strict"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]
optional = false

[workspace.dependencies]
tracing-error = "0.2.0"
rayon = "1.6.1"
serde_json = "1.0.91"
ptr_meta = "0.1.4"
bytecheck = "0.6.11"

[package]
name = "alpacka"
version = "0.1.0"
description = "The next-generation package manager for neovim."
repository = "https://github.com/nyoom-engineering/alpacka"
readme = "README.md"
authors = ["Shaurya Singh <shaunsingh0207@gmail.com>", "Suyashtnt <suyashtnt@gmail.com>"]
license = "MIT"
keywords = ["vim", "neovim", "package", "plugin", "manager"]
categories = ["text-editors"]
edition = "2021"

[dependencies]
git2 = { version = "0.17.2" }
tempfile = "3.3.0"
tracing = { workspace = true }
error-stack = { workspace = true}
rkyv = { workspace = true }
bytecheck = { workspace = true }
ptr_meta = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
vendor = ["git2/vendored-openssl", "git2/vendored-libgit2"]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
