[package]
name = "alpacka-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
error-stack = { workspace = true }
rkyv = { workspace = true }
bytecheck = { workspace = true }
ptr_meta = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
